# Computational-Molecular-Biology

Assembly Of DNA Fragments/: assembly_of_dna_fragments.ipynb
MSA Star alignment algorithm/: BRCA1.txt
Needleman-Wunsch algorithm/version 0/: needlemanWunsch.cpp
Needleman-Wunsch algorithm/version 1/: needlemanWunsch.cpp
Needleman-Wunsch algorithm/version 2/: CMakeLists.txt  main.cpp
Phylogenetic Trees/: Lab_3.ipynb
Star/: starV1.cpp  starV2.cpp
secondary structure prediction in RNA/: Nussinov_Algorithm.ipynb
